--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,7 +253,7 @@ a {
   transition: var(--transition-time);
 }
 
-.hero__button-link {
+.hero__link {
   width: 100%;
   height: 100%;
   display: flex;
