--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -15,7 +15,7 @@
 .hero__title {
     padding-top: 23px;
     padding-bottom: 30px;
-    font-family: 'Merriweather-Bold';
+    font-family: 'Merriweather-Bold', Arial, sans-serif;;
     font-size: 60px;
 }
 
