--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -123,7 +123,8 @@ a {
     background-color: var(--transparent-black);
     color: var(--gold-color);
 }
-.input::placeholder {
+.input::placeholder,
+.textarea::placeholder {
     font-family: inherit;
     color: var(--gold-color);
     font-size: 20px;
@@ -136,4 +137,8 @@ a {
 
 .hidden {
     display: none !important;
+}
+
+.no-scroll {
+    overflow: hidden;
 }
