feat: form sends notification to my telegram :)

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -54,7 +54,7 @@
 
 .form_order .input {
     border-color: var(--black-color);
-    color: var(--black-color);
+    color: var(--white-color);
 }
 
 .form_order .input::placeholder {
