feat: add very simple form validation

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -52,6 +52,12 @@
     background: var(--black-color);
 }
 
+
+.form__error {
+    font-size: 16px;
+    color: var(--red-dark-color);
+}
+
 .form_order .input {
     border-color: var(--black-color);
     color: var(--white-color);
