--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -15,6 +15,7 @@
     --gold-color: #bdae82;
     --white-color: #fff;
     --black-color: #000;
+    --red-dark-color: #472020;
 
     --transparent-black: #0007;
     --transparent-white: #fff7;
