fix: minor bugs with form (styling and scrolling)

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: radial-gradient(var(--black-color) 30%, transparent);
+    background: radial-gradient(var(--gold-color), transparent 70%);
 }
 
 .form {
