--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -13,7 +13,7 @@
 .header__logo {
     background-size: contain;
     background-repeat: no-repeat;
-    transition: filter 1s; /*var(--transition-time)*/
+    transition: filter 1s;
     cursor: pointer;
 }
 .header__logo:hover {
@@ -63,13 +63,12 @@
 
 /* burger-menu */
 .header__burger-menu {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 28px;
 
     display: none;
     flex-direction: column;
-    justify-content: center;
-    gap: 10px;
+    justify-content: space-between;
     margin-left: 25px;
     cursor: pointer;
 }
@@ -79,8 +78,9 @@
 }
 
 .header__burger-stick {
-    height: 4px;
+    height: 3px;
     width: 100%;
+    border-radius: 2px;
 
     background-color: var(--white-color);
     transition: background-color var(--transition-time);
